# Database-Alert-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_config.py
app/adapters/: ai.py  alert_sources.py  escalation.py  external_knowledge.py  flashduty.py  investigation.py  notification.py  pdf_runbooks.py  persistence.py  runbook_store.py  runbooks.py  web_runbooks.py
app/agents/: __init__.py  graph.py  nodes.py  scheduler.py  state.py
app/api/: main.py  schemas.py
app/application/: admin.py  escalation.py  factory.py  routing_policy.py  sanitization.py  scheduler.py  service.py  validation.py
app/domain/: __init__.py  errors.py  models.py  ports.py  routing.py
app/workers/: __init__.py  kafka.py
docs/flashduty-polling/: README.md
docs/flashduty-webhook/: README.md
evaluation/: README.md
evaluation/datasets/: root_cause_diagnosis.jsonl  runbook_matching.jsonl
examples/qq-trial/: README.md  docker-compose.yml  manifest.json  run_cases.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_investigation_pipeline.py  0003_alert_routing.py  0004_enforce_three_severities.py  (+3 more)
policies/: alert-routing.yaml  production-gates.json
runbooks/: README.md  example-connection-limit.md  index.json
tests/: pdf_fixtures.py
tools/: audit_runbook_visuals.py  evaluate_runbooks.py
(+59 files in other folders)
