[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database-alert-agent"
version = "0.1.0"
description = "Extensible AI-assisted database alert analysis service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.12,<1",
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.2,<1",
  "langchain-core>=0.3,<1",
  "openai>=1.60,<3",
  "pypdf>=5,<7",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]
postgres = ["asyncpg>=0.30,<1"]
mysql = ["asyncmy>=0.2,<1"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires an external service such as Kafka",
  "live: uses explicitly enabled real AI and FlashDuty credentials",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
